# Consensus

./: .gitignore  CHANGELOG.md  README.md  TODO.md  cabal.project  cabal.project.local~  distributed.hs  hie.yaml  output0.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  plot.py  plotGCP.py  run.py  runGCP.py
bingbong/: DistribUtils.hs  bingbong-old.hs  bingbong.cabal  bingbong.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: distributed-process-0.7.4-inplace.conf  distributed-process-extras-0.3.5-inplace.conf  package.cache
dist-newstyle/packagedb/ghc-9.4.4/: distributed-process-0.7.4-inplace.conf  package.cache
distributed-haskell/: hotstuff.cabal  hotstuff.hs  notepad.py
gcp/: ConsensusDataTypes.hs  ConsensusLogic.hs  gcp-old.hs  gcp.cabal  gcp.hs
gradedProposalElection/: ConsensusDataTypes.hs  ConsensusLogic.hs  ParseOptions.hs  gradedProposalElection.cabal  gradedProposalElection.hs  parseOptions.hs
hotstuff/: ConsensusDataTypes.hs  ConsensusLogic.hs  ParseOptions.hs  hotstuff-new.hs  hotstuff-old.hs  hotstuff.cabal  hotstuff.hs  parseOptions.hs
sleepyBlockDAG/: ConsensusDataTypes.hs  ConsensusLogic.hs  parseOptions.hs  sleepyBlockDAG-old.hs  sleepyBlockDAG.cabal  sleepyBlockDAG.hs
