name:                Hotstuff
version:             0.1.0.0
synopsis:            Example distributed app
-- description:         
homepage:            yager.io/Distributed/Distributed.html
license:             MIT
license-file:        LICENSE
author:              Will Yager
maintainer:          will.yager@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10



executable Distributed
  main-is:             hotstuff.hs
  -- other-modules:       
  other-extensions:    GeneralizedNewtypeDeriving, DeriveGeneric, TemplateHaskell
  build-depends:       base >= 4.9 && < 5, transformers == 0.5.6.2, containers , distributed-process, network-transport-tcp >= 0.4.1.0 && < 0.8.2, binary >= 0.6.3 && < 0.10, mtl >= 2.0 && < 2.4, lens >=4.13 && <5.2.3, random >= 1.0 && < 1.3
  -- hs-source-dirs:      
  default-language:    Haskell2010

