name:                sleepyBlockDAG
version:             0.1.0.0
synopsis:            Example distributed app
-- description:         
homepage:            yager.io/Distributed/Distributed.html
license:             MIT
license-file:        LICENSE
author:              Will Yager
maintainer:          will.yager@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10



executable sleepyBlockDAG
  main-is:             sleepyBlockDAG.hs
  other-modules:       ParseOptions, ConsensusLogic, ConsensusDataTypes   
  other-extensions:    GeneralizedNewtypeDeriving, DeriveGeneric, TemplateHaskell
  build-depends:       vector, deepseq, bytestring, binary, optparse-applicative, base >= 4.9 && < 5, transformers == 0.5.6.2, containers == 0.6.6, distributed-process, network-transport-tcp >= 0.4.1.0 && < 0.8.2, binary >= 0.6.3 && < 0.10, mtl >= 2.0 && < 2.4, lens >=4.13 && <5.2.3, random >= 1.0 && < 1.3, unix
  -- hs-source-dirs:      src 
  default-language:    Haskell2010
  ghc-options: -O2 -prof -fprof-auto -rtsopts -eventlog -static

